--- a/packages/types/web/index.html
+++ b/packages/types/web/index.html
@@ -18,6 +18,6 @@
 <button id="remove-button" class="button">Remove</button>
 <button id="cancel-button" class="button">Cancel</button>
 
-<script type="application/dart" src="main.dart,js"></script>
+<script type="application/dart" src="main.dart.js"></script>
 </body>
 </html>
